[package]
name = "CLI-P2P-CHAT"
version = "0.1.0"
edition = "2021"

[dependencies]
libp2p = { version = "0.55", features = ["identify","tokio", "dns", "kad", "mdns", "noise", "macros", "tcp", "yamux","gossipsub","quic", "ping", "pnet", "websocket"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4.5.6", features = ["derive"] }
anyhow = "1.0.86"
either = "1.12"
futures = "0.3.31"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }